[package]
name = "moxie-native"
version = "0.1.0"
authors = ["Tiffany Bennett <tiffnixen@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.22.0"
gleam = "0.10.0"
glutin = "0.24.0"
scopeguard = "1.1"
euclid = "0.20.3"
slotmap = "0.4"
font-kit = "0.4.0"
proc-macro-hack = "0.5"
proc-macro-nested = "0.1.3"
enumset = "1.0.1"
log = "0.4.11"

[dependencies.illicit]
git = "https://github.com/anp/moxie.git"
rev = "dyn-cache-v0.12.0"

[dependencies.moxie]
git = "https://github.com/anp/moxie.git"
rev = "dyn-cache-v0.12.0"

[dependencies.topo]
git = "https://github.com/anp/moxie.git"
rev = "dyn-cache-v0.12.0"

[dependencies.webrender]
git = "https://github.com/servo/webrender.git"
rev = "42e0c3246ddc0d53737895b4dabaa7c11c240579"

[dependencies.skribo]
git = "https://github.com/tiffany352/skribo.git"
rev = "de744e106547c6c62fc431928e2bd575e6f66a2e"

[dependencies.moxie-native-style]
path = "./style"

[dependencies.moxie-native-mox]
path = "./mox"

[workspace]
members = [
    "devtools",
    "devtools_example",
]
