[package]
name = "moxie-native"
version = "0.1.0"
authors = ["Tiffany Bennett <tiffnixen@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.26.1"
gleam = "0.12.1"
glutin = "0.28.0"
scopeguard = "1.1"
euclid = "0.22.1"
slotmap = "1.0.6"
font-kit = "0.10.0"
proc-macro-hack = "0.5"
proc-macro-nested = "0.1.3"
enumset = "1.0.1"
log = "0.4.11"
moxie = "0.7.1"
topo = "0.13.2"
illicit = "1.1.2"

[dependencies.webrender]
git = "https://github.com/servo/webrender.git"
rev = "fa736b9b4762a7de5de1ed6ede5c6e64d556c79d"

[dependencies.skribo]
git = "https://github.com/tiffany352/skribo.git"
rev = "5162e87c34d128573c574a39ad040e658dda69db"

[dependencies.moxie-native-style]
path = "./style"

[dependencies.moxie-native-mox]
path = "./mox"

[workspace]
members = [
    "devtools",
    "devtools_example",
]
