[package]
name = "devtools-example"
version = "0.1.0"
authors = ["Tiffany Bennett <tiffnixen@gmail.com>"]
edition = "2018"

[dependencies.moxie-native]
path = "../"

[dependencies.moxie-native-devtools]
path = "../devtools"

[dependencies.topo]
git = "https://github.com/anp/moxie.git"
rev = "9657631b7d2300b834087f3b0c4dc3f840ed7c4d"
