[package]
name = "devtools-example"
version = "0.1.0"
authors = ["Tiffany Bennett <tiffnixen@gmail.com>"]
edition = "2018"

[dependencies.moxie-native]
path = "../"

[dependencies.moxie-native-devtools]
path = "../devtools"

[dependencies.moxie]
git = "https://github.com/anp/moxie.git"
rev = "dyn-cache-v0.12.0"

[dependencies.topo]
git = "https://github.com/anp/moxie.git"
rev = "dyn-cache-v0.12.0"
